# WiringPiBaslerCam

basler/: .MyServer.cpp.swp  BaslerCam.cpp  BaslerCam.h  CMakeLists.txt  MyServer.cpp  MyServer.h  main.cpp
